adding secret access keys

--- a/.github/workflows/infra-eks.yml
+++ b/.github/workflows/infra-eks.yml
@@ -36,18 +36,12 @@ jobs:
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
     
-    # Change the directory to the EKS iac one
-    - name: Change Directory
-      run: |
-        pwd 
-        ls
-        cd iac/eks
+    
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
+      working-directory: ${{ env.working_directory}}
       run: |
-        pwd
-        cd ${{ env.working_directory}}
         terraform init -var-file="../config/common.tfvars"
 
 
@@ -60,10 +54,10 @@ jobs:
       run: |
         pwd
         cd ${{ env.working_directory}}
-        terraform plan -var "region=eu-west-2" -var-file="../config/common.tfvars" -var-file="../config/prod.tfvars" -input=false -out=plan.tfplan
+        terraform plan -var "region=eu-west-2" -var-file="../config/common.tfvars" -var-file="../config/prod.tfvars" -input=false -out=plan.tfplan -var "CONTAINER_ACCESS_KEY=${{ secrets.AWS_ACCESS_KEY }}" -var "CONTAINER_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}"
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
       if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
-      run: terraform apply -auto-approve -input=false
+      run: 
