--- a/.github/workflows/infra-eks.yml
+++ b/.github/workflows/infra-eks.yml
@@ -51,13 +51,13 @@ jobs:
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
+      working-directory: ${{ env.working_directory}}
       run: |
-        pwd
-        cd ${{ env.working_directory}}
         terraform plan -var "region=eu-west-2" -var-file="../config/common.tfvars" -var-file="../config/prod.tfvars" -input=false -out=plan.tfplan -var "container_access_key=${{ secrets.AWS_ACCESS_KEY }}" -var "container_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}"
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
       if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
-      run:  terraform apply -auto-approve -input=false
+      working-directory: ${{ env.working_directory}}
+      run:  terraform apply plan.tfplan -auto-approve 
