--- a/.github/workflows/infra-eks.yml
+++ b/.github/workflows/infra-eks.yml
@@ -60,4 +60,4 @@ jobs:
     - name: Terraform Apply
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       working-directory: ${{ env.working_directory}}
-      run:  terraform apply plan.tfplan -auto-approve 
+      run:  terraform apply plan.tfplan 
