shelving the manual approval for now

--- a/.github/workflows/infra-eks.yml
+++ b/.github/workflows/infra-eks.yml
@@ -72,10 +72,10 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
-      - uses: trstringer/manual-approval@v1
-        with:
-          secret: ${{ github.TOKEN }}
-          approvers: jcontro
+      # - uses: trstringer/manual-approval@v1
+      #   with:
+      #     secret: ${{ github.TOKEN }}
+      #     approvers: jcontro
       
       - name: Terraform Plan and Destroy
         working-directory: ${{ env.working_directory}}
