adding terraform setup to the destroy

--- a/.github/workflows/infra-eks.yml
+++ b/.github/workflows/infra-eks.yml
@@ -76,7 +76,22 @@ jobs:
       #   with:
       #     secret: ${{ github.TOKEN }}
       #     approvers: jcontro
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
       
+      
+
+      # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+      - name: Terraform Init
+        working-directory: ${{ env.working_directory}}
+        run: |
+          terraform init -var-file="../config/common.tfvars"
       - name: Terraform Plan and Destroy
         working-directory: ${{ env.working_directory}}
         run: |
